add config server

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>cart-service</module>
         <module>api</module>
         <module>front-service</module>
+        <module>config-service</module>
     </modules>
 
 
