--- a/front-service/pom.xml
+++ b/front-service/pom.xml
@@ -25,7 +25,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>3.0.7</version>
+        </dependency>
         <dependency>
             <groupId>com.gb.market.market</groupId>
             <artifactId>api</artifactId>
