--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <module>cart-service</module>
         <module>api</module>
         <module>front-service</module>
+        <module>config-server</module>
+        <module>gateway-service</module>
     </modules>
 
 
