--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -5,5 +5,5 @@ spring:
     config:
       server:
         git:
-          uri: file:///z:/GBmarket
+          uri: file:///z:/ConfigStorage
 #          search-paths: ${GIT_SEARCH_PATH}
