--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>front-service</module>
         <module>config-server</module>
         <module>gateway-service</module>
+        <module>auth-service</module>
     </modules>
 
 
