--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -5,5 +5,6 @@ spring:
     config:
       server:
         git:
-          uri: file:///z:/ConfigStorage
+#          uri: file:///z:/ConfigStorage
+          uri: file://Users/alekseyandreev/Documents/ConfigBase
 #          search-paths: ${GIT_SEARCH_PATH}
