--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-#    url: jdbc:h2:file:./user;MODE=PostgreSQL
-    url: jdbc:h2:file://Users/alekseyandreev/Documents/ConfigBase/auth;MODE=PostgreSQL
+    url: jdbc:h2:file:./user;MODE=PostgreSQL
+#    url: jdbc:h2:file://Users/alekseyandreev/Documents/ConfigBase/auth;MODE=PostgreSQL
     username: sa
     password:
   jpa:
