--- a/gateway-service/src/main/resources/application.yaml
+++ b/gateway-service/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
           filters:
             - StripPrefix=1
             - PrefixPath=/gbmarket-core
-#            - JwtAuthFilter
+            - JwtAuthFilter
         - id: cart-service
           uri: http://localhost:8190
           predicates:
@@ -29,7 +29,7 @@ spring:
           filters:
             - StripPrefix=1
             - PrefixPath=/gbmarket-carts
-#            - JwtAuthFilter
+            - JwtAuthFilter
         - id: front-server
           uri: http://localhost:8191
           predicates:
@@ -37,7 +37,7 @@ spring:
           filters:
             - StripPrefix=1
             - PrefixPath=/gbmarket
-#            - JwtAuthFilter
+            - JwtAuthFilter
         - id: auth-server
           uri: http://localhost:8989
           predicates:
@@ -45,7 +45,7 @@ spring:
           filters:
             - StripPrefix=1
             - PrefixPath=/gbmarket-auth
-#            - JwtAuthFilter
+            - JwtAuthFilter
 jwt:
   secret: fgs#$dghdfs%#$234hdfslgdfjb43t34t534og$4352
   lifetime: 300000000
