--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.gb.market.market</groupId>
     <artifactId>cart-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 
     <properties>
@@ -49,11 +50,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.gb.market.market</groupId>
-            <artifactId>api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
