--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -13,6 +13,7 @@
     <groupId>com.gb.market.market</groupId>
     <artifactId>auth-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -59,9 +60,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.gb.market.market</groupId>
-            <artifactId>api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -70,6 +71,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.gb.market.market</groupId>
+            <artifactId>api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
