--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -1,10 +1,16 @@
 server:
   port: 8192
 spring:
+  http:
+    multipart:
+      enabled: true
+      max-file-size: 50MB
+      max-request-size: 50MB
   cloud:
     config:
       server:
         git:
-          uri: file:///z:/ConfigStorage
+          uri: https://github.com/alex-crs/ConfigStorage.git
+#          uri: file:///z:/ConfigStorage
 #          uri: file://Users/alekseyandreev/Documents/ConfigBase
 #          search-paths: ${GIT_SEARCH_PATH}
