--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -13,6 +13,7 @@
     <groupId>com.gb.market.market</groupId>
     <artifactId>gateway-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -34,6 +35,11 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>3.0.8</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
