--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -22,7 +22,15 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.6.0</version>
+        </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
