--- a/auth-service/src/main/resources/application-dev.yaml
+++ b/auth-service/src/main/resources/application-dev.yaml
@@ -4,15 +4,16 @@ server:
     context-path: /gbmarket-auth
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/gbmarket_users
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:./user;MODE=PostgreSQL
+#    url: jdbc:h2:file://Users/alekseyandreev/Documents/ConfigBase/auth;MODE=PostgreSQL
+    username: sa
+    password:
   jpa:
     show-sql: true
-  hibernate:
-    ddl-auto: create
-  database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       settings:
