--- a/core-service/src/main/resources/application-dev.yaml
+++ b/core-service/src/main/resources/application-dev.yaml
@@ -4,15 +4,16 @@ server:
     context-path: /gbmarket-core
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/gbmarket
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:mydatabase;MODE=PostgreSQL
+    username: sa
+    password:
 
   jpa:
-  hibernate:
-    ddl-auto: create
-  database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       settings:
