--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>3.13.2.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
